--- a/assets/catppuccin.css
+++ b/assets/catppuccin.css
@@ -21,6 +21,6 @@
   --submit-button-border-color: #1e66f5;
   --submit-button-background-color: #7287fd;
   --submit-button-color: #ffffff;
-  --graph-opacity: 0;
-  --graph-filter: none;
+  --graph-opacity: 1;
+  --graph-filter: brightness(0.35) grayscale(1);
 }
